# ai-codegen-example

./: README.md  pyproject.toml  template.aider.conf.yml  template.env
prompts/: generate_server.md
src/ai_codegen_example/: main.py
