[project]
name = "ai-codegen-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m-takehara", email = "m.takehara.0611@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "markitdown>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
